make sure table align attrs obey the rules!

--- a/src/styles/z_site.scss
+++ b/src/styles/z_site.scss
@@ -79,8 +79,14 @@ hr {
 table {
   table-layout: fixed;
   width: 100%;
-  th {
+  th, th[align="left"] {
     text-align: left;
+  }
+  th[align="center"] {
+    text-align: center;
+  }
+  th[align="right"] {
+    text-align: right;
   }
 }
 
